--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -52,4 +52,4 @@ jobs:
           folder: build
           target-folder: l4-project-interactive-game
           clean: true
-          token: ${{ secrets.github_pages }}
+          token: ${{ secrets.deploy }}
