--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,7 +37,7 @@ jobs:
     
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
       - name: Download build folder
         uses: actions/download-artifact@v2
