added joystick instead of nes controller
contains bug where it cannot read the angle of the joystick and instead
gets null

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "http-server": "^14.1.0",
     "phaser": "^3.55.2",
+    "smartcontroller": "^3.2.1",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
