--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
         
       - name: Install smartcontroller
-        run: npm install smartcontroller
+        run: npm install smartcontroller@3.2.1
         
       - name: Build
         run: npm run build
