--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,16 +13,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 16
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
 
       - name: Install
         run: npm install
 
       - name: Install smartcontroller
-        run: npm install smartcontroller@3.2.5
+        run: npm install smartcontroller@3.2.8
 
       - name: Build
         run: npm run build
