--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -56,5 +56,5 @@ jobs:
           folder: build
           target-folder: l4-project-interactive-game
           clean: true
-          token: ${{ secrets.fgottagraduate }}
+          token: ${{ secrets.deploy }}
 
